--- a/coding101/index.html
+++ b/coding101/index.html
@@ -11,7 +11,7 @@
     <h2> My name is Brent and I made this</h2>
     </header>
     <main>
-    	<p> This is a project for the intro to HTML and CSS class I impulse enrolled in. </p>
+    	<p> This is a project for the intro to HTML and CSS class that I impulse enrolled in. </p>
     	<p> Here are some books I like:</p>
     	<ul>
     		<li>East of Eden</li>
